@@ -195,8 +195,8 @@ sub dump_as_data {
 	    my $v ;
 	    $scanner->scan_hash(\$v,$node,$element_name,$_);
 	    # create the key even if $v is undef 
-	    $h{$_} = $v ;
-	    ( $_ , $v ) ;
+	    $h{$_} = $v if defined $v;
+	    defined $v ? ( $_ , $v ) : ();
 	} @keys ;
 
 	my $ordered_hash = $node->fetch_element($element_name)->ordered ;
