@@ -7,6 +7,7 @@ TODO:
        * Build depend on Test::Differences
        * Load and grab: fix to accept '-' in element names 
        * Added value help in generated documentation
+       * DumpAsData: skip hash keys containing undef values
 
 2011-04-05 Dominique Dumont  <domi.dumont@free.fr> 1.240
     
